--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "symphony-bdk-ui-toolkit",
-  "version": "1.0.52",
+  "version": "1.1.0",
   "description": "Package with component-based development of SMS",
   "source": "src/index.js",
   "main": "dist/index.js",
   "module": "dist/index.module.js",
   "unpkg": "dist/index.umd.js",
   "scripts": {
+    "create-release": "./scripts/create-release.sh",
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006 -s ./public & nodemon mock-json-server/mock-server.js",
     "mock": "nodemon mock-json-server/mock-server.js",
     "build-storybook": "build-storybook",
     "build": "rm -rf dist/ && microbundle --jsx React.createElement --external styled-components,d3-time,d3-scale,d3-shape,d3-time-format,react-stockcharts,@datepicker-react/hooks && rm dist/index.module.js dist/index.module.js.map",
-    "dev": "microbundle --jsx React.createElement --external styled-components,d3-time,d3-scale,d3-shape,d3-time-format,react-stockcharts,@datepicker-react/hooks --watch --compress false --raw  true"
+    "dev": "microbundle --jsx React.createElement --external styled-components,d3-time,d3-scale,d3-shape,d3-time-format,react-stockcharts,@datepicker-react/hooks --watch --compress false --raw  true",
+    "eslint": "eslint src"
   },
   "files": [
     "dist"
@@ -32,9 +34,11 @@
     "@babel/core": "^7.7.5",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/preset-env": "^7.7.6",
+    "@babel/preset-modules": "^0.1.4",
     "@babel/preset-react": "^7.7.4",
     "@storybook/addon-a11y": "^5.3.3",
     "@storybook/addon-actions": "^5.3.3",
+    "@storybook/addon-docs": "^5.3.4",
     "@storybook/addon-knobs": "^5.3.3",
     "@storybook/addon-links": "^5.3.3",
     "@storybook/addon-notes": "^5.3.3",
@@ -43,6 +47,7 @@
     "@storybook/api": "^5.3.3",
     "@storybook/components": "^5.3.3",
     "@storybook/core-events": "^5.3.3",
+    "@storybook/preset-create-react-app": "^1.5.1",
     "@storybook/react": "^5.3.3",
     "axios": "^0.19.0",
     "babel-eslint": "^10.0.3",
@@ -73,6 +78,7 @@
     "react-dom": "^16.12.0",
     "react-modal": "^3.11.1",
     "react-phone-input-2": "^2.11.0",
+    "react-scripts": "^3.3.0",
     "react-select": "^3.0.8",
     "react-spinners": "^0.6.1",
     "react-stockcharts": "^0.7.8",
@@ -89,18 +95,16 @@
   "dependencies": {
     "@codastic/react-positioning-portal": "^0.3.2",
     "@datepicker-react/hooks": "^2.7.0",
-    "@storybook/addon-docs": "^5.3.4",
-    "@storybook/preset-create-react-app": "^1.5.1",
     "d3-dsv": "^1.2.0",
-    "microbundle": "0.11.0",
+    "microbundle": "0.12.0",
     "react-hooks-sse": "^1.0.0",
     "react-resize-detector": "^4.2.1",
     "react-responsive-tabs": "^3.3.0",
-    "react-scripts": "^3.3.0",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5"
   },
   "peerDependencies": {
+    "@datepicker-react/hooks": "^2.7.0",
     "axios": "^0.19.0",
     "d3-scale": "^3.2.1",
     "d3-shape": "^1.3.7",
@@ -110,7 +114,6 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-stockcharts": "^0.7.8",
-    "styled-components": "^4.4.1",
-    "@datepicker-react/hooks": "^2.7.0"
+    "styled-components": "^4.4.1"
   }
 }
